fix: skeleton on iOS

--- a/src/components/skeleton/skeleton.scss
+++ b/src/components/skeleton/skeleton.scss
@@ -1,5 +1,7 @@
 .skeleton {
   position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
 
   &::after {
     content: '';
@@ -12,8 +14,6 @@
   }
 
   &.skeleton-gradient {
-    overflow: hidden;
-
     &::before {
       content: '';
       position: absolute;
